changed package name to cbr_custom_sc_magazine

--- a/.github/workflows/ci-pipeline__dev.yml
+++ b/.github/workflows/ci-pipeline__dev.yml
@@ -8,13 +8,14 @@ on:
 env:
   GIT__BRANCH      : 'dev'
   RELEASE_TYPE     : 'minor'
-  PACKAGE_NAME     : 'cbr_custom__sc_magazine'
-  DOCKER__CONTEXT  : "."
-  DOCKER__FILE     : './deploy/docker/cbr_custom__sc_magazine/Dockerfile'
+  PACKAGE_NAME     : 'cbr_custom_sc_magazine'
+#  DOCKER__CONTEXT  : "."
+#  DOCKER__FILE     : './deploy/docker/cbr_custom__sc_magazine/Dockerfile'
 
 jobs:
 
   run-tests:
+    if: False
     name: "Run tests"
     runs-on: ubuntu-latest
     steps:
@@ -49,5 +50,5 @@ jobs:
 
       - name: publish-to-pypi
         uses: owasp-sbot/OSBot-GitHub-Actions/.github/actions/pypi__publish@dev
-    needs:
-      - increment-tag
+#    needs:
+#      - increment-tag
