--- a/.github/workflows/ci-pipeline__main.yml
+++ b/.github/workflows/ci-pipeline__main.yml
@@ -8,9 +8,9 @@ on:
 env:
   GIT__BRANCH      : 'main'
   RELEASE_TYPE     : 'major'
-  PACKAGE_NAME     : 'cbr_custom__sc_magazine'
+  PACKAGE_NAME     : 'cbr_custom_sc_magazine'
   DOCKER__CONTEXT  : "."
-  DOCKER__FILE     : './deploy/docker/cbr_custom__sc_magazine/Dockerfile'
+  DOCKER__FILE     : './deploy/docker/cbr_custom_sc_magazine/Dockerfile'
 
 jobs:
 
