restoring GH AI dev tests

--- a/.github/workflows/ci-pipeline__dev.yml
+++ b/.github/workflows/ci-pipeline__dev.yml
@@ -13,7 +13,6 @@ env:
 jobs:
 
   run-tests:
-    if: False
     name: "Run tests"
     runs-on: ubuntu-latest
     steps:
@@ -48,5 +47,5 @@ jobs:
 
       - name: publish-to-pypi
         uses: owasp-sbot/OSBot-GitHub-Actions/.github/actions/pypi__publish@dev
-#    needs:
-#      - increment-tag
+    needs:
+      - increment-tag
