--- a/.github/workflows/ci-pipeline__main.yml
+++ b/.github/workflows/ci-pipeline__main.yml
@@ -15,7 +15,7 @@ env:
 jobs:
 
   run-tests:
-    if: False
+    //if: False
     name: "Run tests"
     runs-on: ubuntu-latest
     steps:
@@ -83,5 +83,5 @@ jobs:
           AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID__654654216424     }}
           AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY__654654216424 }}
           AWS_DEFAULT_REGION    : ${{ secrets.AWS_DEFAULT_REGION__654654216424    }}
-#    needs:
-#      - publish-to-aws-ecr
+    needs:
+      - publish-to-aws-ecr
