--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,13 @@ homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--sc-magazine"
 repository  = "https://github.com/the-cyber-boardroom/cbr-custom--sc-magazine"
 
 [tool.poetry.dependencies]
-python          = "^3.7"
+python          = "^3.11"
 osbot-utils     = "*"
 osbot-aws       = "*"
+osbot-fast-api  = "*"
+mangum          = "*"
+httpx           = "*"
+uvicorn         = "*"
 
 
 [build-system]
