--- a/.github/workflows/ci-pipeline__main.yml
+++ b/.github/workflows/ci-pipeline__main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   GIT__BRANCH      : 'main'
-  RELEASE_TYPE     : 'minor' #'major'
+  RELEASE_TYPE     : 'major'
   PACKAGE_NAME     : 'cbr_custom_sc_magazine'
   DOCKER__CONTEXT  : "."
   DOCKER__FILE     : './deploy/docker/cbr_custom_sc_magazine/Dockerfile'
