refactored class names and added qa test to lambda server

--- a/.github/workflows/ci-pipeline__main.yml
+++ b/.github/workflows/ci-pipeline__main.yml
@@ -15,7 +15,7 @@ env:
 jobs:
 
   run-tests:
-    #if: False
+    if: False
     name: "Run tests"
     runs-on: ubuntu-latest
     steps:
@@ -90,3 +90,13 @@ jobs:
           AWS_DEFAULT_REGION    : ${{ secrets.AWS_DEFAULT_REGION__654654216424    }}
     needs:
       - publish-to-aws-ecr
+
+  run-qa-tests:
+    name: "Run QA Tests"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Tests and Integration Tests
+        uses: ./.github/actions/aws__run-qa-tests
+#    needs:
+#      - deploy-lambda-function
