added env vars to QA function (so that It can find the url)

--- a/.github/workflows/ci-pipeline__main.yml
+++ b/.github/workflows/ci-pipeline__main.yml
@@ -98,5 +98,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run Tests and Integration Tests
         uses: ./.github/actions/aws__run-qa-tests
+        env:
+          AWS_ACCOUNT_ID        : ${{ secrets.AWS_ACCOUNT_ID__654654216424        }}
+          AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID__654654216424     }}
+          AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY__654654216424 }}
+          AWS_DEFAULT_REGION    : ${{ secrets.AWS_DEFAULT_REGION__654654216424    }}
 #    needs:
 #      - deploy-lambda-function
